sfdx-source/force-app/main/default/objects/WorkStepDependencyTemplate__c/WorkStepDependencyTemplate__c.object-meta.xml
<CustomObject>
    <description>LEM-1061: It stores template of dependencies between WorkSteps.
It is used for creating actual dependency records after creation of WorkSteps.</description>
    <label>Work Step Dependency Template</label>
    <nameField>
        <displayFormat>WSDT-{0}</displayFormat>
        <label>Work Step Dependency Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Step Dependency Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>