sfdx-source/force-app/main/default/objects/WorkStepDependencyTemplate__c/fields/Dependee_Work_Plan_Template_Entry__c.field-meta.xml
<CustomField>
    <fullName>Dependee_Work_Plan_Template_Entry__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-1061: It indicates dependee WorkPlanTemplateEntry. It is used for populating dependee WorkStep in actual dependency record.</description>
    <inlineHelpText>Indicates dependee WorkPlanTemplateEntry</inlineHelpText>
    <label>Dependee Work Plan Template Entry</label>
    <referenceTo>WorkPlanTemplateEntry</referenceTo>
    <relationshipLabel>Dependent Work Step Templates</relationshipLabel>
    <relationshipName>DependentWorkStepTemplates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>