sfdx-source/force-app/main/default/objects/WorkStepDependencyTemplate__c/fields/Dependent_Work_Plan_Template_Entry__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Work_Plan_Template_Entry__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-1061: It indicates dependee WorkPlanTemplateEntry. It is used for populating dependent WorkStep in actual dependency record.</description>
    <inlineHelpText>Indicates dependent WorkPlanTemplateEntry</inlineHelpText>
    <label>Dependent Work Plan Template Entry</label>
    <referenceTo>WorkPlanTemplateEntry</referenceTo>
    <relationshipLabel>Dependee Work Step Dependency Templates</relationshipLabel>
    <relationshipName>DependeeWorkStepDependencyTemplates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>