sfdx-source/force-app/main/default/objects/WorkStepDependencyTemplate__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1061: It indicates whether dependency between WorkSteps is applicable.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>